@@ -313,6 +313,7 @@
     <ClInclude Include="..\..\src\libtsduck\tsTSFileOutputResync.h" />
     <ClInclude Include="..\..\src\libtsduck\tsTSPacket.h" />
     <ClInclude Include="..\..\src\libtsduck\tsTSScanner.h" />
+    <ClInclude Include="..\..\src\libtsduck\tsTSSpeedMetrics.h" />
     <ClInclude Include="..\..\src\libtsduck\tsTuner.h" />
     <ClInclude Include="..\..\src\libtsduck\tsTunerArgs.h" />
     <ClInclude Include="..\..\src\libtsduck\tsTunerParameters.h" />
@@ -601,6 +602,7 @@
     <ClCompile Include="..\..\src\libtsduck\tsTSFileOutputResync.cpp" />
     <ClCompile Include="..\..\src\libtsduck\tsTSPacket.cpp" />
     <ClCompile Include="..\..\src\libtsduck\tsTSScanner.cpp" />
+    <ClCompile Include="..\..\src\libtsduck\tsTSSpeedMetrics.cpp" />
     <ClCompile Include="..\..\src\libtsduck\tsTunerArgs.cpp" />
     <ClCompile Include="..\..\src\libtsduck\tsTunerParameters.cpp" />
     <ClCompile Include="..\..\src\libtsduck\tsTunerParametersATSC.cpp" />
