@@ -311,6 +311,7 @@ HEADERS += \
     ../../../src/libtsduck/tsTSFileOutputResync.h \
     ../../../src/libtsduck/tsTSPacket.h \
     ../../../src/libtsduck/tsTSScanner.h \
+    ../../../src/libtsduck/tsTSSpeedMetrics.h \
     ../../../src/libtsduck/tsTuner.h \
     ../../../src/libtsduck/tsTunerArgs.h \
     ../../../src/libtsduck/tsTunerParameters.h \
@@ -589,6 +590,7 @@ SOURCES += \
     ../../../src/libtsduck/tsTSFileOutputResync.cpp \
     ../../../src/libtsduck/tsTSPacket.cpp \
     ../../../src/libtsduck/tsTSScanner.cpp \
+    ../../../src/libtsduck/tsTSSpeedMetrics.cpp \
     ../../../src/libtsduck/tsTunerArgs.cpp \
     ../../../src/libtsduck/tsTunerParameters.cpp \
     ../../../src/libtsduck/tsTunerParametersATSC.cpp \
